--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^3.23.1",
     "http": "0.0.1-security",
     "mongoose": "^5.9.19",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "winston": "^3.2.1"
   }
 }
