--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "express": "^4.17.1",
     "helmet": "^3.23.1",
     "http": "0.0.1-security",
+    "moment": "^2.27.0",
+    "moment-timezone": "^0.5.31",
     "mongoose": "^5.9.19",
     "socket.io": "^2.3.0",
     "winston": "^3.2.1"
